fix(navbar): updating z-index for navbar

--- a/app/src/ui/wallet-selector-navbar/WalletSelectorNavbar.module.scss
+++ b/app/src/ui/wallet-selector-navbar/WalletSelectorNavbar.module.scss
@@ -6,7 +6,7 @@
   top: 0;
   right: 0;
   left: 0;
-  z-index: $z-index-navigation;
+  z-index: $z-index-content;
   width: 100%;
   background-color: var(--color-background);
 
